scheduling-admission-controller/scheduling-admission-controller.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: scheduling-admission
webhooks:
  - name: analytics-exploration-ead20c6.private-us-east-1.github.net
    rules:
      - apiGroups:
          - "argoproj.io"
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
        resources:
          - hyperparamworkflows
    failurePolicy: Ignore
    clientConfig:
      url: "https://analytics-exploration-ead20c6.private-us-east-1.github.net:12345"
      caBundle: change-me
